--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,9 @@
 {deps, [
     %%{rabbit_common, ".*", {git, "git://github.com/jbrisbin/rabbit_common.git", {tag, "rabbitmq-3.5.0"}}}
     %% use our fork till upstream fixes the mochijson2 issue
-    {rabbit_common, ".*", {git, "git://github.com/alertlogic/rabbit_common", {branch, master}}}
+    {rabbit_common, ".*", {git, "git://github.com/SergeyOvchinnik/rabbit_common.git", {branch, 'sovchinnik-erlang-19-warnings'}}}
 ]}.
+
 
 {erl_opts, [
   debug_info,
